<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="3"
    tools:context=".MainActivity" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="25dp"
            android:paddingTop="25dp" >

            <Button
                android:id="@+id/Main_Pills_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Main_Pills_Button" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" 
            android:paddingBottom="25dp"
            android:paddingTop="25dp">
            
            <Button
                android:id="@+id/Main_Schedule_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Main_Schedule_Button" />
        </TableRow>
            

            

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="25dp"
            android:paddingTop="25dp" >

            <Button
                android:id="@+id/Main_Aid_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Main_MyMedikit_Button" />

        </TableRow>
    

</LinearLayout>
