<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PillsSettingsActivity" >

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="3dip"
                    android:background="#000023" />

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_activity_pills_settings"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/pillsSettings_Name_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textSize="24sp" >

                        <requestFocus />
                    </EditText>
                </TableRow>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="3dip"
                    android:background="#000023" />

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/type_activity_pills_settings"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <RadioGroup
                            android:id="@+id/pillsSettings_Type_radioGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <RadioButton
                                android:id="@+id/pillsSettings_pillsType_radioButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/pills_activity_pills_settings"
                                android:textSize="20sp" />

                            <RadioButton
                                android:id="@+id/pillsSettings_syringeType_radioButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/syringe_activity_pills_settings"
                                android:textSize="20sp" />

                            <RadioButton
                                android:id="@+id/pillsSettings_elixirType_radioButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/elixir_activity_pills_settings"
                                android:textSize="20sp" />
                        </RadioGroup>
                    </LinearLayout>
                </TableRow>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="3dip"
                    android:background="#000023" />

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/alarm_activity_pills_settings"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/pillsSettings_Alarm_checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="3dip"
                    android:background="#000023" />

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal|center"
                        android:text="@string/amount_pills_settings"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="24sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/measure_activity_pills_settings"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Spinner
                        android:id="@+id/pills_settings_measure_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inda_medikit_pills_settings"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/pills_settings_indaMedikit_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/pills_settings_capacity_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/pills_settings_capacity_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                </TableRow>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="3dip"
                    android:background="#000023" />

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </TableRow>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="3dip"
                    android:background="#000023" />

            </LinearLayout>
        </ScrollView>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/pillsSettings_saveChange_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_activity_pills_settings"
            android:textSize="24sp" />

        <Button
            android:id="@+id/pillsSettings_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_activity_pills_settings"
            android:textSize="24sp" />

    </TableRow>

</LinearLayout>